# piSynth

./: .gitignore  CMakeLists.txt  Doxyfile.in  Makefile  README.md  binding.gyp  index.html  main.c  main.cpp  main.h  midi.c  midi.h  midiHandler.js  oscillator.js  package.json  params.json  pi-synth.js  server.js  synth.c  synth.h  wscript
lib/: oscillator.js  server.js
public/: index.html
public/js/: envelope.controls.js  modulator.controls.js
scripts/: index.html
scripts/css/: local.css
scripts/js/: carrier.controls.js  controls.js  filter.controls.js  modulator.controls.js
src/: alsaconnect.c  alsaconnect.h  config.h.in  filter.c  filter.h  lfo.c  lfo.h  main.c  main.cpp  main.h  midi.c  midi.h  oscillator.cpp  oscillator.h  pcm.c  pcm.h  pcmworker.cpp  pcmworker.h  server.c  server.h  synth  threadedworker.cpp  threadedworker.h
